test for val and save fcns

--- a/lib/configs/mobilenet_v2_sjtuRoad_class.yaml
+++ b/lib/configs/mobilenet_v2_sjtuRoad_class.yaml
@@ -32,3 +32,7 @@ DATASET:
   FOCAL_X: 2.1624e+03
   WCE_LOSS_WEIGHT: 0.5
   OPTICAL_CENTER: (1.25654e+03, 7.719e+02)
+
+TRAIN:
+  VAL_STEP: 100
+  SNAPSHOT_ITERS: 200
